# udp-process

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
include/: cfg.h  cfg_read.h  cli_cmd.h  cli_options.h  global.h  pkt.h  pkt_def.h  pkt_parse.h  pkt_receive.h  utils.h
reader/: reader.py
scripts/: format  install_ryml.sh  m2c_config.sh  self_test.sh
src/: cfg_read.cpp  cli_cmd.cpp  main.cpp  pkt_parse.cpp  pkt_receive.cpp
tests/: m2c.yml  self.yml  udp_sender.py
ui/: README.md  app.py
ui/static/: script.js  theme.js
ui/templates/: index.html
